--- a/Main.xaml
+++ b/Main.xaml
@@ -1,4 +1,4 @@
-<Activity mc:Ignorable="sap sap2010" x:Class="Main" sap2010:ExpressionActivityEditor.ExpressionActivityEditor="C#" sap:VirtualizedContainerService.HintSize="649,1650" sap2010:WorkflowViewState.IdRef="ActivityBuilder_1" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:mca="clr-namespace:Microsoft.CSharp.Activities;assembly=System.Activities" xmlns:s="clr-namespace:System;assembly=mscorlib" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:sc="clr-namespace:System.Collections;assembly=mscorlib" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=mscorlib" xmlns:sco="clr-namespace:System.Collections.ObjectModel;assembly=mscorlib" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+<Activity mc:Ignorable="sap sap2010" x:Class="Main" sap2010:ExpressionActivityEditor.ExpressionActivityEditor="C#" sap:VirtualizedContainerService.HintSize="709,1606" sap2010:WorkflowViewState.IdRef="ActivityBuilder_1" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:mca="clr-namespace:Microsoft.CSharp.Activities;assembly=System.Activities" xmlns:s="clr-namespace:System;assembly=mscorlib" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:sc="clr-namespace:System.Collections;assembly=mscorlib" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=mscorlib" xmlns:sco="clr-namespace:System.Collections.ObjectModel;assembly=mscorlib" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
   <TextExpression.NamespacesForImplementation>
     <sco:Collection x:TypeArguments="x:String">
       <x:String>System.Activities</x:String>
@@ -66,7 +66,7 @@
       <AssemblyReference>WindowsBase</AssemblyReference>
     </sco:Collection>
   </TextExpression.ReferencesForImplementation>
-  <Sequence sap2010:Annotation.AnnotationText="Separate a collection of error codes using Switch&#xA;&#xA;Considering a collection of error codes stored in an Array of Strings, separate them based on their type of error code (&quot;Ax&quot;, &quot;Bx&quot; or “Cx”) and store them in 3 different arrays. &#xA;&#xA;Note: The initial Array should contain the following values: &#xA;&#xA;&quot;Ax001&quot;,&quot;Ax002&quot;,&quot;Ax003&quot;,&quot;Ax004&quot;,&quot;Ax005&quot;,&quot;Bx001&quot;,&quot;Bx002&quot;,&quot;Bx003&quot;,&quot;Cx001&quot;,&quot;Cx002&quot;,&quot;Cx003&quot;,&quot;Cx004&quot;&#xA;&#xA;//variables - note they are instantiated&#xA;errorCodes - Array of &lt;String&gt;, populated&#xA;axCodes, bxCodes, cxCodes - all are lists of empty strings.  I chose to use lists instead of arrays to store the error codes." DisplayName="Sequence Main" sap:VirtualizedContainerService.HintSize="659,1625" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence sap2010:Annotation.AnnotationText="Separate a collection of error codes using Switch&#xA;&#xA;Considering a collection of error codes stored in an Array of Strings, separate them based on their type of error code (&quot;Ax&quot;, &quot;Bx&quot; or “Cx”) and store them in 3 different arrays. &#xA;&#xA;Note: The initial Array should contain the following values: &#xA;&#xA;&#xA;&#xA;//variables - note they are instantiated&#xA;errorCodes - Array of &lt;String&gt;, populated&#xA;axCodes, bxCodes, cxCodes - all are lists of empty strings.  I chose to use lists instead of arrays to store the error codes." DisplayName="Sequence Main" sap:VirtualizedContainerService.HintSize="719,1446" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <Sequence.Variables>
       <Variable x:TypeArguments="s:String[]" Name="errorCodes">
         <Variable.Default>
@@ -95,13 +95,13 @@
         <x:Boolean x:Key="IsAnnotationDocked">True</x:Boolean>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
-    <ui:ForEach x:TypeArguments="x:String" CurrentIndex="{x:Null}" DisplayName="For Each ErrorCodes" sap:VirtualizedContainerService.HintSize="617,966" sap2010:WorkflowViewState.IdRef="ForEach`1_4">
+    <ui:ForEach x:TypeArguments="x:String" CurrentIndex="{x:Null}" DisplayName="For Each ErrorCodes" sap:VirtualizedContainerService.HintSize="657,780" sap2010:WorkflowViewState.IdRef="ForEach`1_4">
       <ui:ForEach.Body>
         <ActivityAction x:TypeArguments="x:String">
           <ActivityAction.Argument>
             <DelegateInArgument x:TypeArguments="x:String" Name="item" />
           </ActivityAction.Argument>
-          <Sequence DisplayName="Sequence Switch Container" sap:VirtualizedContainerService.HintSize="581,832" sap2010:WorkflowViewState.IdRef="Sequence_4">
+          <Sequence DisplayName="Sequence Switch Container" sap:VirtualizedContainerService.HintSize="621,654" sap2010:WorkflowViewState.IdRef="Sequence_4">
             <Sequence.Variables>
               <Variable x:TypeArguments="x:String" Name="xCode" />
             </Sequence.Variables>
@@ -110,7 +110,7 @@
                 <x:Boolean x:Key="IsExpanded">True</x:Boolean>
               </scg:Dictionary>
             </sap:WorkflowViewStateService.ViewState>
-            <Assign sap2010:Annotation.AnnotationText="This extra step and variable are not needed.  The &quot;Item.ToString().ToLower().Substring(0, 2)&quot; could be used in the Expression directly.&#xA;&#xA;Pulling out this value and assigning it to xCode was helpful for inspecting in the debugger and also for code clarity." DisplayName="Assign xCode" sap:VirtualizedContainerService.HintSize="539,192" sap2010:WorkflowViewState.IdRef="Assign_1">
+            <Assign sap2010:Annotation.AnnotationText="This extra step and variable are not needed.  The &quot;Item.ToString().ToLower().Substring(0, 2)&quot; could be used in the Expression directly.&#xA;&#xA;Pulling out this value and assigning it to xCode was helpful for inspecting in the debugger and also for code clarity." DisplayName="Assign xCode" sap:VirtualizedContainerService.HintSize="559,169" sap2010:WorkflowViewState.IdRef="Assign_1">
               <Assign.To>
                 <OutArgument x:TypeArguments="x:String">
                   <mca:CSharpReference x:TypeArguments="x:String" sap2010:WorkflowViewState.IdRef="CSharpReference`1_1">xCode</mca:CSharpReference>
@@ -127,13 +127,13 @@
                 </scg:Dictionary>
               </sap:WorkflowViewStateService.ViewState>
             </Assign>
-            <Sequence DisplayName="Body Sequence" sap:VirtualizedContainerService.HintSize="539,508" sap2010:WorkflowViewState.IdRef="Sequence_2">
+            <Sequence DisplayName="Body Sequence" sap:VirtualizedContainerService.HintSize="559,337" sap2010:WorkflowViewState.IdRef="Sequence_2">
               <sap:WorkflowViewStateService.ViewState>
                 <scg:Dictionary x:TypeArguments="x:String, x:Object">
                   <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                 </scg:Dictionary>
               </sap:WorkflowViewStateService.ViewState>
-              <Switch x:TypeArguments="x:String" sap2010:Annotation.AnnotationText="The item in the Expression that is being 'switched' on is the value being compared each iteration.  Classic examples are months of the year or days of the week." DisplayName="Switch ErrorCodes" sap:VirtualizedContainerService.HintSize="497,416" sap2010:WorkflowViewState.IdRef="Switch`1_2">
+              <Switch x:TypeArguments="x:String" sap2010:Annotation.AnnotationText="The item in the Expression that is being 'switched' on is the value being compared each iteration.  Classic examples are months of the year or days of the week." DisplayName="Switch ErrorCodes" sap:VirtualizedContainerService.HintSize="497,226" sap2010:WorkflowViewState.IdRef="Switch`1_2">
                 <Switch.Default>
                   <WriteLine sap2010:Annotation.AnnotationText="It is good practice to always use the default case intelligently instead of leaving it blank.  Reporting on the data element is helpful for follow up actions." DisplayName="Write Line Default Case" sap:VirtualizedContainerService.HintSize="230,148" sap2010:WorkflowViewState.IdRef="WriteLine_6">
                     <sap:WorkflowViewStateService.ViewState>
@@ -156,7 +156,7 @@
                     <x:Boolean x:Key="IsAnnotationDocked">True</x:Boolean>
                   </scg:Dictionary>
                 </sap:WorkflowViewStateService.ViewState>
-                <AddToCollection x:TypeArguments="x:String" x:Key="ax" DisplayName="AddToCollection&lt;String&gt;" sap:VirtualizedContainerService.HintSize="200,22" sap2010:WorkflowViewState.IdRef="AddToCollection`1_6">
+                <AddToCollection x:TypeArguments="x:String" x:Key="ax" DisplayName="AddToCollection&lt;String&gt;" sap:VirtualizedContainerService.HintSize="200,25" sap2010:WorkflowViewState.IdRef="AddToCollection`1_6">
                   <AddToCollection.Item>
                     <InArgument x:TypeArguments="x:String">
                       <mca:CSharpValue x:TypeArguments="x:String" sap2010:WorkflowViewState.IdRef="CSharpValue`1_41">item.ToString()</mca:CSharpValue>
@@ -166,7 +166,7 @@
                     <mca:CSharpValue x:TypeArguments="scg:ICollection(x:String)" sap2010:WorkflowViewState.IdRef="CSharpValue`1_40">axCodes</mca:CSharpValue>
                   </InArgument>
                 </AddToCollection>
-                <AddToCollection x:TypeArguments="x:String" x:Key="bx" DisplayName="AddToCollection&lt;String&gt;" sap:VirtualizedContainerService.HintSize="200,22" sap2010:WorkflowViewState.IdRef="AddToCollection`1_7">
+                <AddToCollection x:TypeArguments="x:String" x:Key="bx" DisplayName="AddToCollection&lt;String&gt;" sap:VirtualizedContainerService.HintSize="200,25" sap2010:WorkflowViewState.IdRef="AddToCollection`1_7">
                   <AddToCollection.Item>
                     <InArgument x:TypeArguments="x:String">
                       <mca:CSharpValue x:TypeArguments="x:String" sap2010:WorkflowViewState.IdRef="CSharpValue`1_43">item.ToString()</mca:CSharpValue>
@@ -176,7 +176,7 @@
                     <mca:CSharpValue x:TypeArguments="scg:ICollection(x:String)" sap2010:WorkflowViewState.IdRef="CSharpValue`1_42">bxCodes</mca:CSharpValue>
                   </InArgument>
                 </AddToCollection>
-                <AddToCollection x:TypeArguments="x:String" x:Key="cx" DisplayName="AddToCollection&lt;String&gt;" sap:VirtualizedContainerService.HintSize="200,22" sap2010:WorkflowViewState.IdRef="AddToCollection`1_8">
+                <AddToCollection x:TypeArguments="x:String" x:Key="cx" DisplayName="AddToCollection&lt;String&gt;" sap:VirtualizedContainerService.HintSize="200,25" sap2010:WorkflowViewState.IdRef="AddToCollection`1_8">
                   <AddToCollection.Item>
                     <InArgument x:TypeArguments="x:String">
                       <mca:CSharpValue x:TypeArguments="x:String" sap2010:WorkflowViewState.IdRef="CSharpValue`1_45">item.ToString()</mca:CSharpValue>
@@ -197,7 +197,7 @@
         </InArgument>
       </ui:ForEach.Values>
     </ui:ForEach>
-    <WriteLine sap2010:Annotation.AnnotationText="String.Join(&quot;DELIMITER&quot;, ListName) is a way to print the list contents without a ForEach" DisplayName="Write Line AX" sap:VirtualizedContainerService.HintSize="617,118" sap2010:WorkflowViewState.IdRef="WriteLine_1">
+    <WriteLine sap2010:Annotation.AnnotationText="String.Join(&quot;DELIMITER&quot;, ListName) is a way to print the list contents without a ForEach" DisplayName="Write Line AX" sap:VirtualizedContainerService.HintSize="657,119" sap2010:WorkflowViewState.IdRef="WriteLine_1">
       <sap:WorkflowViewStateService.ViewState>
         <scg:Dictionary x:TypeArguments="x:String, x:Object">
           <x:Boolean x:Key="IsAnnotationDocked">True</x:Boolean>
@@ -207,12 +207,12 @@
         <mca:CSharpValue x:TypeArguments="x:String" sap2010:WorkflowViewState.IdRef="CSharpValue`1_53">"AX codes: " + String.Join(", ", axCodes)</mca:CSharpValue>
       </InArgument>
     </WriteLine>
-    <WriteLine DisplayName="Write Line BX" sap:VirtualizedContainerService.HintSize="617,61" sap2010:WorkflowViewState.IdRef="WriteLine_3">
+    <WriteLine DisplayName="Write Line BX" sap:VirtualizedContainerService.HintSize="657,62" sap2010:WorkflowViewState.IdRef="WriteLine_3">
       <InArgument x:TypeArguments="x:String">
         <mca:CSharpValue x:TypeArguments="x:String" sap2010:WorkflowViewState.IdRef="CSharpValue`1_54">"BX codes: " + String.Join(", ", bxCodes)</mca:CSharpValue>
       </InArgument>
     </WriteLine>
-    <WriteLine DisplayName="Write Line CX" sap:VirtualizedContainerService.HintSize="617,61" sap2010:WorkflowViewState.IdRef="WriteLine_4">
+    <WriteLine DisplayName="Write Line CX" sap:VirtualizedContainerService.HintSize="657,62" sap2010:WorkflowViewState.IdRef="WriteLine_4">
       <InArgument x:TypeArguments="x:String">
         <mca:CSharpValue x:TypeArguments="x:String" sap2010:WorkflowViewState.IdRef="CSharpValue`1_55">"CX codes: " + String.Join(", ", cxCodes)</mca:CSharpValue>
       </InArgument>
